student_app/force-app/main/default/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <label>Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>