student_app/force-app/main/default/objects/Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>






    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic Transcript</fullName>
                <default>true</default>
                <label>Academic Transcript</label>
            </value>
            <value>
                <fullName>Identity Proof</fullName>
            </value>
            <value>
                <fullName>Address Proof</fullName>
            </value>
            <value>
                <fullName>Passport Photo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>

</CustomField>