student_app/force-app/main/default/objects/Document__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Text</type>

    <length>255</length>






</CustomField>