student_app/force-app/main/default/objects/Document__c/fields/Student_Application__c.field-meta.xml
<CustomField>
    <fullName>Student_Application__c</fullName>
    <label>Student Application</label>
    <type>MasterDetail</type>






    <referenceTo>Student_Application__c</referenceTo>
    <relationshipName>Documents</relationshipName>


</CustomField>