student_app/force-app/main/default/objects/Document__c/validationRules/Require_Rejection_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Rejection_Reason</fullName>
    <active>true</active>
    <description>Ensures a rejection reason is entered if the Verification Status is Rejected.</description>
    <errorConditionFormula>ISPICKVAL(Verification_Status__c, &quot;Rejected&quot;) &amp;&amp; ISBLANK(Rejection_Reason__c)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>A rejection reason must be provided if the document is rejected.</errorMessage>
</ValidationRule>